# adios2cache

./: .gitignore  CMakeLists.txt  ReadMe  build.sh  integrating.cpp  main.cpp  notes
include/: CacheBitmap.h  CacheFunctions.h  CacheMetadata.h  CachelibInterface.h  NdPointCluster.h  QueryBox.h  utils.h
src/: QueryBox.cpp
test/: README  TestCacheBitmap.cpp  TestCacheLibInterface.cpp  TestCacheLibWithNavy.cpp  TestMd5.cpp  TestNDPointsCluster.cpp  testCacheLibWithNavy.sh
